# pointcloud_registration_two_plane_base

./: .gitignore  CMakeLists.txt  README.md  main.cpp
custom_lib/: CMakeLists.txt
custom_lib/include/: octree_search_centroid.h  octree_viewer.h  octree_voxel_container.h  types.h
custom_lib/src/: octree_search_centroid.cpp  octree_viewer.cpp
data/data/0001/: lidar_0_0_2023-06-05_13-27-28.pcd  lidar_0_1_2023-06-05_13-27-25.pcd  rgbd_0_0_2023-06-05_13-27-35.pcd  rgbd_0_1_2023-06-05_13-27-42.pcd
data/data/0002/: lidar_0_0_2023-06-05_13-29-54.pcd  lidar_0_1_2023-06-05_13-30-11.pcd  rgbd_0_0_2023-06-05_13-29-58.pcd  rgbd_0_1_2023-06-05_13-30-03.pcd
data/data/0003/: lidar_0_0_2023-06-05_13-31-56.pcd  lidar_0_1_2023-06-05_13-31-43.pcd  rgbd_0_0_2023-06-05_13-31-48.pcd  rgbd_0_1_2023-06-05_13-31-53.pcd
data/data/0004/: lidar_0_0_2023-06-05_13-33-03.pcd  lidar_0_1_2023-06-05_13-33-12.pcd  rgbd_0_0_2023-06-05_13-33-10.pcd  rgbd_0_1_2023-06-05_13-33-18.pcd
data/data/0005/: lidar_0_0_2023-06-05_13-36-34.pcd  lidar_0_1_2023-06-05_13-36-43.pcd  rgbd_0_0_2023-06-05_13-36-40.pcd  rgbd_0_1_2023-06-05_13-36-51.pcd
data/data/0006/: lidar_0_0_2023-06-05_13-39-50.pcd  lidar_0_1_2023-06-05_13-39-39.pcd  rgbd_0_0_2023-06-05_13-39-44.pcd  rgbd_0_1_2023-06-05_13-39-48.pcd
data/data/0007/: lidar_0_0_2023-06-05_13-25-17.pcd  lidar_0_1_2023-06-05_13-25-15.pcd  rgbd_0_0_2023-06-05_13-25-24.pcd  rgbd_0_1_2023-06-05_13-25-31.pcd
data/data/0008/: lidar_0_0_2023-06-05_13-23-01.pcd  lidar_0_1_2023-06-05_13-23-10.pcd  rgbd_0_0_2023-06-05_13-23-07.pcd  rgbd_0_1_2023-06-05_13-23-15.pcd
data/data/0009/: lidar_0_0_2023-06-05_13-20-58.pcd  lidar_0_1_2023-06-05_13-21-24.pcd  rgbd_0_0_2023-06-05_13-21-07.pcd  rgbd_0_1_2023-06-05_13-21-13.pcd
data/data/0010/: lidar_0_0_2023-06-05_09-22-08.pcd  lidar_0_0_2023-06-05_09-22-08.ply  lidar_0_1_2023-06-05_09-22-06.pcd  lidar_0_1_2023-06-05_09-22-06.ply  rgbd_0_0_2023-06-05_09-22-15.pcd  rgbd_0_1_2023-06-05_09-22-22.pcd
data/lidar_rgbd/0_5-300-0_5-300-0_6/0001/: info
data/lidar_rgbd/0_5-300-0_5-300-0_6/0004/: info
data/lidar_rgbd/0_5-300-0_5-300-0_6/0007/: info
data/lidar_rgbd/0_5-300-0_5-300-0_6/0010/: info
python/: CMakeLists.txt  setup.py.in
python/tpbr_python/: __init__.py  tpbr_example.py  tpbr_python.cc
solver/: CMakeLists.txt
solver/include/: solver.h
solver/src/: solver.cpp
tools/: CMakeLists.txt
tools/include/: base_processor.h  octree_search_centroid.h  octree_viewer.h  octree_voxel_container.h  planarity_extractor.h  regression.h  solver.h  tool_types.h  types.h  utils.h  visualization.h
tools/src/: base_processor.cpp  octree_search_centroid.cpp  octree_viewer.cpp  planarity_extractor.cpp  regression.cpp  solver.cpp  utils.cpp  visualization.cpp
